--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set Node.js 14.x
-        uses: actions/setup-node@v2.4.1
+      - name: Set Node.js 19.7.0
+        uses: actions/setup-node@v3.6.0
         with:
-          node-version: 14.x
+          node-version: 19.7.0
 
       - name: Install dependencies
         run: npm ci
@@ -31,7 +31,7 @@ jobs:
         run: npm run build
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v2.1.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -39,12 +39,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v3.6.0
+        uses: docker/metadata-action@v4.3.0
         with:
           images: ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2.7.0
+        uses: docker/build-push-action@v4.0.0
         with:
           context: .
           push: true
